...
    <string name="link">Website: https://pubnative.net</string>

    <!-- Toolbar -->
    <string name="app_name">EasySound</string>
    <string name="action_licenses">Licenses</string>
    <string name="action_settings">Settings</string>
    <string name="tab_title_record">Record</string>
    <string name="tab_title_saved_recordings">Saved Recordings</string>

    <!-- Toasts -->
    <string name="toast_recording_start">Recording started</string>
    <string name="toast_recording_finish">Recording saved to</string>
    <string name="toast_file_delete">%1$s successfully deleted</string>
    <string name="toast_file_exists">The file %1$s already exists. Please choose a different file name.</string>
...
